HDclassif version 1.2.2 2015-02-14:
- The ARI criterion is introduced in the function predict for hddc objects. It is a criterion to assess the goodness of fit of the clustering. ARI completely replaces the former "best classication rate", as the algorithm used to compute it was flawed.
- The readability of help files is improved.

HDclassif version 1.2.2 2013-01-15:

Help files:
- imoprtant in hddc.Rd: mismatch between the code and the help files; the stopping criterion (eps) now is correctly described as 'the difference between two successive log likelihoods' (as it is in the code) instead of 'the difference between two successive log likelihood per observation'
- some rewritting of help files
Code issues:
- now some errors are handled properly by the function hddc
- corrected a bug when using common dimension models which could lead to a selection of the intrinsic dimension of 0
- now hddc will stop if the number of potential individuals in a class is inferior to 2; if so it will give the message 'empty class' which means stricly less than 2 individuals
- in hddc and hdda the option 'dim.ctrl' is now named 'noise.ctrl' for a clearer meaning
- changing the name of the option 'ctrl' in hddc to 'min.individuals' for a clearer meaning.
- 'min.individuals' is the minimum NUMBER of individuals in a class, it is not a PERCENTAGE of the total nomber of observations anymore. Its value cannot be lower than 2


HDclassif version 1.2.1 2012-01-05:

- the citation of the package is updated
- new reference in .Rd files


HDclassif version 1.2 2011-07-15:

- now the BIC and the log likelihood are not divided by N (the number of observation) anymore
- help files have been rewritten
- very slight changes in the random initialization of hddc (now the random init cannot begin with an empty class)
- changes on the predict.hdc function. It now works all the time.
- added some features to hdda, notably the model "all" and the V-fold cross validation for dimension selection