@@ -2,16 +2,16 @@ Encoding: UTF-8
 Package: HDclassif
 Type: Package
 Title: High Dimensional Supervised Classification and Clustering
-Version: 1.2.3
-Depends: graphics, stats, MASS
-Date: 2015-02-14
+Version: 1.3
+Depends: grDevices, utils, graphics, stats, MASS
+Date: 2015-06-30
 Author: Laurent Berge, Charles Bouveyron and Stephane Girard
 Maintainer: Laurent Berge <laurent.berge@u-bordeaux.fr>
 Description: Discriminant analysis and data clustering methods for high dimensional data, based on the assumption that high-dimensional data live in different subspaces with low dimensionality proposing a new parametrization of the Gaussian mixture model which combines the ideas of dimension reduction and constraints on the model.
 License: GPL-2
 LazyLoad: yes
 ZipData: no
-Packaged: 2015-02-15 21:24:58 UTC; Laurent
 NeedsCompilation: no
+Packaged: 2015-07-01 12:46:41 UTC; Laurent
 Repository: CRAN
-Date/Publication: 2015-02-16 06:48:25
+Date/Publication: 2015-07-01 15:04:58
