@@ -1,11 +1,14 @@
 
-importFrom(stats,predict)
-importFrom(graphics,plot)
+importFrom(stats,predict,cov,kmeans,rmultinom,na.omit,runif)
+importFrom(graphics,plot,points,lines,par,abline,barplot,axis,legend)
 importFrom(MASS,mvrnorm)
+importFrom(utils,data)
+importFrom(grDevices,devAskNewPage)
 
-export(hdda,hddc,simuldata,demo_hddc)
+export(hdda,hddc,hdmda,simuldata,demo_hddc)
 
 S3method(predict,hdc)
+S3method(predict,hdmda)
 S3method(plot,hdc)
 S3method(print,hd)
 S3method(print,hdc)
